패키징 war 방식으로 변경

--- a/src/main/resources/properties/common.properties
+++ b/src/main/resources/properties/common.properties
@@ -3,4 +3,4 @@ coinmarketcap.url=https://api.coinmarketcap.com/v1/ticker/%s/?convert=KRW
 
 #line
 line.notify.url=https://notify-api.line.me/api/notify
-line.notify.token=
+line.notify.token=osNmDRut6kNHoXbwHFTyH21PDUGYbvR0BF1jl4zxfVT
