--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,6 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/world
+    url: jdbc:mysql://localhost:3306/mycoinasset
     username: root
-    password: 12345
+    password: Votmdnjem0)
